# c_plus_plus_template

./: .clang-format  CMakeLists.txt
include/: VariadicToOutputStream.hpp  my_file_io_funcs.h  my_file_io_funcs.hpp  my_utils.hpp  utils.h
src/: main.cpp  my_file_io_funcs.cpp  my_utils.cpp
